--- a/content/posts/causal-inference/sbe_103.md
+++ b/content/posts/causal-inference/sbe_103.md
@@ -24,7 +24,7 @@ Explicitly, $\eta(\cdot)$ is the underlying discrete distribution of the random 
 Formally, the induced distribution is given by:
 
 $$\eta_{\mathcal{T},\mathcal{Q}}(w_{1:T}) = \begin{cases}
-\prod_{k=0}^{K} \frac{\mathbb{1}\{w_{t_k} = 1\}}{q_{t_k}} \cdot \frac{\mathbb{1}\{w_{t_k} = 0\}}{\bar{q}_{t_k}}, & \text{if } \forall k \in \{0, 1, \ldots, K\}, \\
+\prod_{k=0}^{K} q_{t_k}^{\mathbb{1}\{w_{t_k} = 1\}} \bar{q}_{t_k}^{\mathbb{1}\{w_{t_k} = 0\}}, & \text{if } \forall k \in \{0, 1, \ldots, K\}, \\
 & \quad w_{t_k} = w_{t_k+1} = \cdots = w_{t_{k+1}-1}, \\
 0, & \text{otherwise.}
 \end{cases} \tag{3}$$
