docs: Add reference URL to PyMC notebook and remove old checkpoint files.

--- a/content/ipynb/pymc/pymc_403.ipynb
+++ b/content/ipynb/pymc/pymc_403.ipynb
@@ -15,6 +15,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://juanitorduz.github.io/intro_causal_inference_ppl_pymc/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Why Probabilistic Programming Languages?\n",
     "\n",
     "Probabilistic Programming Languages (PPLs) like NumPyro, PyMC, and Stan offer several compelling advantages for causal inference:\n",
