build: upgrade Dockerfile to Python 3.12, remove example files, and update notebook output.

--- a/content/ipynb/pymc/pymc_403.ipynb
+++ b/content/ipynb/pymc/pymc_403.ipynb
@@ -301,7 +301,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x742e4ce00a90>"
+       "<graphviz.graphs.Digraph at 0x7f7f3f82a4d0>"
       ]
      },
      "execution_count": 3,
@@ -486,7 +486,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x742df4be8e50>"
+       "<graphviz.graphs.Digraph at 0x7f7fd0166c10>"
       ]
      },
      "execution_count": 4,
