feat: Update post front matter to TOML format, add `type`, `draft`, and `summary` fields, and adjust title and date.

--- a/content/posts/causal-inference/ci_201.md
+++ b/content/posts/causal-inference/ci_201.md
@@ -1,9 +1,12 @@
----
-title: "PyMC 403: Introduction to Causal Inference with PPLs"
-date: 2025-11-29
-categories: ["Causal Inference"]
-tags: ["PyMC", "Causal Inference"]
----
++++
+title = "CI 201: Introduction to Causal Inference with PPLs"
+type = "post"
+date = 2025-11-30
+draft = false
+summary = "Introduction to Causal Inference with Probabilistic Programming Languages using PyMC."
+categories = ["Causal Inference"]
+tags = ["PyMC", "Causal Inference"]
++++
 
 # PyMC 403: Introduction to Causal Inference with PPLs
 
