feat: publish deep learning post and add helper utilities for GradCAM visualization and GloVe embeddings.

--- a/content/ipynb/groq_setup.ipynb
+++ b/content/ipynb/groq_setup.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ModelResponse(id='chatcmpl-fa7cac84-0f1a-4f26-8840-f1902bdb4cfd', created=1764549164, model='openai/gpt-oss-120b', object='chat.completion', system_fingerprint='fp_4867cb64c5', choices=[Choices(finish_reason='stop', index=0, message=Message(content='Hello! 👋 How can I assist you today?', role='assistant', tool_calls=None, function_call=None, provider_specific_fields=None, reasoning='The user says \"hello from litellm\". Likely wants a response. No policy violation. Just respond friendly. Possibly ask how can I help.'))], usage=Usage(completion_tokens=52, prompt_tokens=76, total_tokens=128, completion_tokens_details=CompletionTokensDetailsWrapper(accepted_prediction_tokens=None, audio_tokens=None, reasoning_tokens=32, rejected_prediction_tokens=None, text_tokens=None, image_tokens=None), prompt_tokens_details=None, queue_time=0.348069983, prompt_time=0.00388941, completion_time=0.110413169, total_time=0.114302579), usage_breakdown=None, x_groq={'id': 'req_01kbbn6yxje1681dn22ffpshxb', 'seed': 1092938325}, service_tier='auto')\n"
+      "ModelResponse(id='chatcmpl-553a1b03-def3-436d-be69-d84ce796f052', created=1764608026, model='openai/gpt-oss-120b', object='chat.completion', system_fingerprint='fp_3c6f17fc9c', choices=[Choices(finish_reason='stop', index=0, message=Message(content='Hello! 👋 How can I assist you today?', role='assistant', tool_calls=None, function_call=None, provider_specific_fields=None, reasoning='The user says \"hello from litellm\". Likely a simple greeting, respond politely.'))], usage=Usage(completion_tokens=40, prompt_tokens=76, total_tokens=116, completion_tokens_details=CompletionTokensDetailsWrapper(accepted_prediction_tokens=None, audio_tokens=None, reasoning_tokens=20, rejected_prediction_tokens=None, text_tokens=None, image_tokens=None), prompt_tokens_details=None, queue_time=0.135985777, prompt_time=0.002866225, completion_time=0.083254298, total_time=0.086120523), usage_breakdown=None, x_groq={'id': 'req_01kbddba2zepxa7haxvr61016b', 'seed': 2078646179}, service_tier='auto')\n"
      ]
     }
    ],
@@ -39,8 +39,8 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"chatcmpl-ebf9dd49-3138-4dc7-a7e9-40df3a47488d\",\n",
-      "  \"created\": 1764549168,\n",
+      "  \"id\": \"chatcmpl-c17f15f7-14bc-41ed-a38f-8af9d6e05745\",\n",
+      "  \"created\": 1764608085,\n",
       "  \"model\": \"openai/gpt-oss-120b\",\n",
       "  \"object\": \"chat.completion\",\n",
       "  \"system_fingerprint\": \"fp_4867cb64c5\",\n",
@@ -49,37 +49,37 @@
       "      \"finish_reason\": \"stop\",\n",
       "      \"index\": 0,\n",
       "      \"message\": {\n",
-      "        \"content\": \"Hello! 👋 How can I assist you today?\",\n",
+      "        \"content\": \"Hello! 👋 How can I help you today?\",\n",
       "        \"role\": \"assistant\",\n",
       "        \"tool_calls\": null,\n",
       "        \"function_call\": null,\n",
       "        \"provider_specific_fields\": null,\n",
-      "        \"reasoning\": \"We need to respond. The user says \\\"hello from litellm\\\". Likely they expect a greeting. Just respond politely.\"\n",
+      "        \"reasoning\": \"The user says \\\"hello from litellm\\\". Probably wants a friendly response. Should respond.\"\n",
       "      }\n",
       "    }\n",
       "  ],\n",
       "  \"usage\": {\n",
-      "    \"completion_tokens\": 47,\n",
+      "    \"completion_tokens\": 40,\n",
       "    \"prompt_tokens\": 76,\n",
-      "    \"total_tokens\": 123,\n",
+      "    \"total_tokens\": 116,\n",
       "    \"completion_tokens_details\": {\n",
       "      \"accepted_prediction_tokens\": null,\n",
       "      \"audio_tokens\": null,\n",
-      "      \"reasoning_tokens\": 27,\n",
+      "      \"reasoning_tokens\": 20,\n",
       "      \"rejected_prediction_tokens\": null,\n",
       "      \"text_tokens\": null,\n",
       "      \"image_tokens\": null\n",
       "    },\n",
       "    \"prompt_tokens_details\": null,\n",
-      "    \"queue_time\": 0.007099335,\n",
-      "    \"prompt_time\": 0.004250385,\n",
-      "    \"completion_time\": 0.101042184,\n",
-      "    \"total_time\": 0.105292569\n",
+      "    \"queue_time\": 0.004047416,\n",
+      "    \"prompt_time\": 0.003108041,\n",
+      "    \"completion_time\": 0.091395767,\n",
+      "    \"total_time\": 0.094503808\n",
       "  },\n",
       "  \"usage_breakdown\": null,\n",
       "  \"x_groq\": {\n",
-      "    \"id\": \"req_01kbbn73dae1j88k4f9hrhgqb1\",\n",
-      "    \"seed\": 108205893\n",
+      "    \"id\": \"req_01kbddd36mf4k8qab8xbhwfmxz\",\n",
+      "    \"seed\": 294693911\n",
       "  },\n",
       "  \"service_tier\": \"auto\"\n",
       "}\n"
