feat: Add new Torch deep learning tutorials, update Groq setup notebook, and remove an outdated Torch post.

--- a/content/ipynb/groq_setup.ipynb
+++ b/content/ipynb/groq_setup.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1f83cbe5-a55a-4ce1-b830-983edc6a7079",
    "metadata": {},
    "outputs": [
@@ -39,11 +39,11 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"id\": \"chatcmpl-c17f15f7-14bc-41ed-a38f-8af9d6e05745\",\n",
-      "  \"created\": 1764608085,\n",
+      "  \"id\": \"chatcmpl-0483dcb4-f293-41f9-87ce-ef3d126bc2cc\",\n",
+      "  \"created\": 1764608941,\n",
       "  \"model\": \"openai/gpt-oss-120b\",\n",
       "  \"object\": \"chat.completion\",\n",
-      "  \"system_fingerprint\": \"fp_4867cb64c5\",\n",
+      "  \"system_fingerprint\": \"fp_ef479defa8\",\n",
       "  \"choices\": [\n",
       "    {\n",
       "      \"finish_reason\": \"stop\",\n",
@@ -54,32 +54,32 @@
       "        \"tool_calls\": null,\n",
       "        \"function_call\": null,\n",
       "        \"provider_specific_fields\": null,\n",
-      "        \"reasoning\": \"The user says \\\"hello from litellm\\\". Probably wants a friendly response. Should respond.\"\n",
+      "        \"reasoning\": \"The user says \\\"hello from litellm\\\". Likely they are testing. We need to respond appropriately. Probably just a greeting. The instruction: we are ChatGPT. Should respond friendly.\"\n",
       "      }\n",
       "    }\n",
       "  ],\n",
       "  \"usage\": {\n",
-      "    \"completion_tokens\": 40,\n",
+      "    \"completion_tokens\": 60,\n",
       "    \"prompt_tokens\": 76,\n",
-      "    \"total_tokens\": 116,\n",
+      "    \"total_tokens\": 136,\n",
       "    \"completion_tokens_details\": {\n",
       "      \"accepted_prediction_tokens\": null,\n",
       "      \"audio_tokens\": null,\n",
-      "      \"reasoning_tokens\": 20,\n",
+      "      \"reasoning_tokens\": 40,\n",
       "      \"rejected_prediction_tokens\": null,\n",
       "      \"text_tokens\": null,\n",
       "      \"image_tokens\": null\n",
       "    },\n",
       "    \"prompt_tokens_details\": null,\n",
-      "    \"queue_time\": 0.004047416,\n",
-      "    \"prompt_time\": 0.003108041,\n",
-      "    \"completion_time\": 0.091395767,\n",
-      "    \"total_time\": 0.094503808\n",
+      "    \"queue_time\": 0.147516185,\n",
+      "    \"prompt_time\": 0.003806944,\n",
+      "    \"completion_time\": 0.133238803,\n",
+      "    \"total_time\": 0.137045747\n",
       "  },\n",
       "  \"usage_breakdown\": null,\n",
       "  \"x_groq\": {\n",
-      "    \"id\": \"req_01kbddd36mf4k8qab8xbhwfmxz\",\n",
-      "    \"seed\": 294693911\n",
+      "    \"id\": \"req_01kbde77f5ejvv4b6cjwxsv971\",\n",
+      "    \"seed\": 753311690\n",
       "  },\n",
       "  \"service_tier\": \"auto\"\n",
       "}\n"
