fix: Remove redundant tag from Rust 103-1 post metadata

--- a/content/posts/Rust/rust-103-1.md
+++ b/content/posts/Rust/rust-103-1.md
@@ -1,7 +1,7 @@
 +++
 title = "Rust 103-1: Variables and Mutability"
 date = "2026-01-04"
-tags = ["rust", "variables", "mutability", "shadowing", "programming"]
+tags = ["rust", "variables", "mutability", "shadowing"]
 categories = ["posts"]
 series = ["Rust 101"]
 type = "post"
