fix: Remove redundant tag from Rust 103-2 post metadata

--- a/content/posts/Rust/rust-103-2.md
+++ b/content/posts/Rust/rust-103-2.md
@@ -1,7 +1,7 @@
 +++
 title = "Rust 103-2: Data Types"
 date = "2026-01-05"
-tags = ["rust", "data-types", "scalar", "compound", "integer", "tuple", "array", "programming"]
+tags = ["rust", "scalar", "compound", "integer", "tuple", "array", "programming"]
 categories = ["posts"]
 series = ["Rust 101"]
 type = "post"
