fix: Update draft status and math rendering for Rust 104-1 post

--- a/content/posts/Rust/rust-104-1.md
+++ b/content/posts/Rust/rust-104-1.md
@@ -5,8 +5,8 @@ tags = ["rust", "ownership", "memory-safety", "programming"]
 categories = ["posts"]
 series = ["Rust 104"]
 type = "post"
-draft = true
-math = false
+draft = false
+math = true
 description = "An introduction to Rust's ownership system, explaining how it ensures memory safety and prevents undefined behavior."
 +++
 
