fix: Update draft status and math rendering for Rust 104-2 post

--- a/content/posts/Rust/rust-104-2.md
+++ b/content/posts/Rust/rust-104-2.md
@@ -5,8 +5,8 @@ tags = ["rust", "references", "borrowing", "memory-safety", "programming"]
 categories = ["posts"]
 series = ["Rust 104"]
 type = "post"
-draft = true
-math = false
+draft = false
+math = true
 description = "Exploring Rust's borrowing system, including references, permissions, and the borrow checker."
 +++
 
