--- a/content/posts/Rust/rust-104-3.md
+++ b/content/posts/Rust/rust-104-3.md
@@ -5,7 +5,7 @@ tags = ["rust", "ownership", "borrowing", "errors", "programming"]
 categories = ["posts"]
 series = ["Rust 104"]
 type = "post"
-draft = true
+draft = false
 math = false
 description = "Common ownership and borrowing errors in Rust and how to fix them."
 +++
