fix: Enable math rendering for Rust 104-4 post on slices

--- a/content/posts/Rust/rust-104-4.md
+++ b/content/posts/Rust/rust-104-4.md
@@ -6,7 +6,7 @@ categories = ["posts"]
 series = ["Rust 104"]
 type = "post"
 draft = false
-math = false
+math = true
 description = "Understanding Rust slices: how they prevent bugs, why certain patterns cause errors, and best practices for using string and array slices."
 +++
 
