feat: Publish Rust 104-5 post on ownership recap and add Rust 106-3 post on concise control flow

--- a/content/posts/Rust/rust-104-5.md
+++ b/content/posts/Rust/rust-104-5.md
@@ -5,7 +5,7 @@ tags = ["rust", "ownership", "python", "memory-management", "garbage-collection"
 categories = ["posts"]
 series = ["Rust 104"]
 type = "post"
-draft = true
+draft = false
 math = false
 description = "A comprehensive recap of Rust's ownership system, contrasted with Python's automatic memory management."
 +++
