--- a/content/posts/Rust/rust-105-2.md
+++ b/content/posts/Rust/rust-105-2.md
@@ -1,7 +1,7 @@
 +++
 title = "Rust 105-2: An Example Program Using Structs"
 date = "2026-01-15"
-tags = ["rust", "structs", "examples", "debugging", "programming"]
+tags = ["rust", "structs"]
 categories = ["posts"]
 series = ["Rust 105"]
 type = "post"
