docs: remove "programming" tag from Rust post.

--- a/content/posts/Rust/rust-107-2.md
+++ b/content/posts/Rust/rust-107-2.md
@@ -1,7 +1,7 @@
 +++
 title = "Rust 107-2: Paths for Referring to an Item in the Module Tree"
 date = "2026-01-21"
-tags = ["rust", "paths", "module-tree", "absolute-paths", "relative-paths", "super", "pub", "programming"]
+tags = ["rust", "paths", "module-tree", "absolute-paths", "relative-paths", "super", "pub"]
 categories = ["posts"]
 series = ["Rust 107"]
 type = "post"
