fix: remove redundant "error handling" tag from Rust 109-1 post

--- a/content/posts/Rust/rust-109-1.md
+++ b/content/posts/Rust/rust-109-1.md
@@ -1,7 +1,7 @@
 +++
 title = "Rust 109-1: Unrecoverable Errors with Panic"
 date = "2026-01-28"
-tags = ["rust", "error handling", "panic", "unwinding", "backtrace"]
+tags = ["rust", "panic", "unwinding", "backtrace"]
 categories = ["posts"]
 series = ["Rust 109"]
 type = "post"
