--- a/content/posts/Rust/rust-109-3.md
+++ b/content/posts/Rust/rust-109-3.md
@@ -1,7 +1,7 @@
 +++
 title = "Rust 109-3: To panic! or Not to panic!"
 date = "2026-01-30"
-tags = ["rust", "error handling", "panic", "result", "validation", "custom types"]
+tags = ["rust", "error handling", "panic", "validation", "custom types"]
 categories = ["posts"]
 series = ["Rust 109"]
 type = "post"
