fix: update publication dates for Rust and PKPD posts; add new MMM 105 post on marketing analytics

--- a/content/posts/mmm/mmm-104.md
+++ b/content/posts/mmm/mmm-104.md
@@ -20,6 +20,14 @@ The estimands are richer than a single average effect. Teams often want a panel-
 ## Example 2: TV advertising carryover and mediation
 A consumer brand varies TV spend across markets and weeks. Endogeneity is central: spend typically increases when managers anticipate demand or respond to competitor moves. Even with fixed effects, time-varying confounders (weather, promotions, local shocks) can drive both spend and sales.
 
+In TV planning, exposure is often summarized by **GRP (Gross Rating Points)**. GRP aggregates delivery as the product of **reach** and **average frequency** in the target audience. Formally:
+
+$$
+	ext{GRP} = \text{Reach (\%)} \times \text{Average Frequency}
+$$
+
+Equivalently, GRP is the sum of **rating points** across all spots in the plan. For example, if a campaign reaches 40% of the target audience at an average frequency of 3, then $\text{GRP} = 40 \times 3 = 120$. This matters for MMM because GRP is a common exposure input, and its construction clarifies what variation is being modeled (reach vs frequency vs total delivery).
+
 Carryover matters just as much as confounding. TV effects often decay over multiple weeks, so the estimand is a **dynamic dose–response** with a long-run multiplier rather than a single-week lift. Choosing the lag structure (geometric decay vs flexible lags) is part of the identification story. Mediation complicates reporting: if TV drives search and search drives sales, controlling for search estimates a *direct* effect, not the *total* effect. Clear estimand definitions and sensitivity checks keep the analysis honest. In practice, teams combine distributed lag models with synthetic control or high-dimensional adjustment to guard against spurious trends.
 
 ## Example 3: Platform market entry
